--- a/practice/index.html
+++ b/practice/index.html
@@ -118,11 +118,11 @@
     <div id="stats"> 
 		<div id="stats-item">
 		<span id="wins"></span>	
-			<input type="button" id="" value="😊CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad">
+			<!-- <input type="button" id="" value="😊CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad"> -->
 		<span id="time"></span>
 		</div>			
 	</div>	
-	<br>
+	<!-- <br> -->
     <div id="lives">
 	</div>	
     <div id="board">
