--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 	<script defer src="geordle.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!-- add icon link for all standard browsers -->
+	
+  <!-- FB Meta Tags -->
+  <meta property="og:url" content="https://sank0403.github.io/geordle/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Geordle - Wordle for Countries and Capitals">
+  <meta property="og:description" content="Guess the Country and Capital Pairing. A new game is available each day.">
+  <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://sank0403.github.io/geordle/wallpaper.jpg" />
+  
     <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
             type = "image/x-icon">  
 	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
