--- a/practice/index.html
+++ b/practice/index.html
@@ -51,9 +51,10 @@
 		<span style="--i:12">d</span>		
 		<span style="--i:13">e</span>
 	</div><br>
-	<button data-modal-target="#modal" class="buttonrad">❓RULES</button> 
-	<input type="button" id="" value="🌎DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad">
-	<input type="button" value="❤️GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">			
+	<button data-modal-target="#modal" class="buttonrad1">❓RULES</button> 
+	<input type="button" id="" value="🌎DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad1">
+	<input type="button" value="❤️GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">		
+	<input type="button" id="" value="😊CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad">	
 	</center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
@@ -118,7 +119,7 @@
     <div id="stats"> 
 		<div id="stats-item">
 		<span id="wins"></span>	
-			<input type="button" id="" value="😊CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad">
+			<input type="button" id="" value="🔃" onclick="window.location.reload(); this.blur();" class="buttonref">
 		<span id="time"></span>
 		</div>			
 	</div>	
