--- a/practice/index.html
+++ b/practice/index.html
@@ -119,7 +119,7 @@
     <div id="stats"> 
 		<div id="stats-item">
 		<span id="wins"></span>	
-			<input type="button" id="" value="🔃" onclick="window.location.reload(); this.blur();" class="buttonref">
+			<input type="button" id="" value="⟳" onclick="window.location.reload(); this.blur();" class="buttonref">
 		<span id="time"></span>
 		</div>			
 	</div>	
