--- a/classic/index.html
+++ b/classic/index.html
@@ -24,6 +24,16 @@
 	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
+	<div id="icons">
+		<div id="icons-item">
+			<span class="icons-item">
+				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
+			</span>	
+			<span class="icons-item">
+				<a href="https://sank0403.github.io/geordle/"><img src="clock.jpg" style="width:30px;height:30px" alt ="Daily Mode"></a>
+			</span>			
+		</div>
+	</div>
 	<center><img class="headerimage" src="maporig.jpg">
 	<div id="title">
 		<div class="waviy">
@@ -51,13 +61,13 @@
 		<span style="--i:12">d</span>		
 		<span style="--i:13">e</span>
 	</div><br>	
-	<button data-modal-target="#modal" class="buttonrad">❓RULES</button> 
+	<!-- <button data-modal-target="#modal" class="buttonrad">❓RULES</button>  -->
     <!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
 	<!-- &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;  -->
 	<!-- <input type="button" id="hint" value="Hint💡" onclick="this.disabled=true; hint();" class="buttonrad">	  -->
 	<input type="button" id="hint" value="💡HINT" onclick="hint(); this.blur();" class="buttonrad">
 	<input type="button" id="giveup" value="👎GIVE UP" onclick="giveUp(); this.blur();" class="buttonrad"> 
-	<input type="button" id="" value="🌎 DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad">
+	<!-- <input type="button" id="" value="🌎 DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad"> -->
 	</center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
