--- a/practice/index.html
+++ b/practice/index.html
@@ -24,6 +24,16 @@
 	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
+	<div id="icons">
+		<div id="icons-item">
+			<span class="icons-item">
+				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:30px;height:30px;">
+			</span>	
+			<span class="icons-item">
+				<a href="https://sank0403.github.io/geordle/"><img src="clock.jpg" style="width:30px;height:30px" alt ="Daily Mode"></a>
+			</span>			
+		</div>
+	</div>
 	<center><img class="headerimage" src="maporig.jpg">
 	<div id="title">
 		<div class="waviy">
@@ -51,10 +61,10 @@
 		<span style="--i:12">d</span>		
 		<span style="--i:13">e</span>
 	</div><br>
-	<button data-modal-target="#modal" class="buttonrad1">❓RULES</button> 
-	<input type="button" id="" value="🌎 DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad1">
-	<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">		
+	<!-- <button data-modal-target="#modal" class="buttonrad1">❓RULES</button>  -->
+	<!-- <input type="button" id="" value="🌎 DAILY" onclick="window.open('https://sank0403.github.io/geordle/' , '_self'); this.blur();" class="buttonrad1"> -->
 	<input type="button" id="" value="😊 CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic' , '_self'); this.blur();" class="buttonrad">	
+	<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">		
 	</center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
