--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
 				</div>
 			</div>
 		</div>
-		<center><div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div></center>
-		<br>
+<!-- 		<center><div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div></center>
+		<br> -->
 	</div>
 	<div id="overlay"></div>
 	<div id="overlay1"></div>
