--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<span style="--i:6">L</span>
 			<span style="--i:7">E</span>
 		</div>
-	</div>
+	</div><br>
 	<div class="waviy1">
 		<span style="--i:1">d</span>
 		<span style="--i:2">a</span>
@@ -119,8 +119,8 @@
 		  <br><br>
 		  If you identify the COUNTRY and CAPITAL successfully, before running out of all lives, you convert the remaining lives into ⭐'s. You can get a maximum of 5 ⭐'s every day.   
 		  <br><br>
-		  Use the Practice Button, to play an unlimited mode, and improve your COUNTRY and CAPITAL IQ.  
-		  <br><br>
+<!-- 		  Use the Practice Button, to play an unlimited mode, and improve your COUNTRY and CAPITAL IQ.  
+		  <br><br> -->
 		  <center><b>EXAMPLES</b><br></center>
 		  <br><div><u>COUNTRY</u></div><br>
 			<div style="float:left; display:flex;">
@@ -185,7 +185,7 @@
 						id="CoffeButton" value="Buy Me a Coffee❤️" /><a>
 			</div>
 		</div>
-		<hr>
+		<hr>		
 		<div id="footer">
 			<div>
 				<div id="bbhdr">New Game In</div>
@@ -202,7 +202,8 @@
 	</div>
 	<div id="overlay"></div>
 	<div id="overlay1"></div>
-	<hr>			
+	<br><br>
+	<hr>		
     <div id="lives">
 	</div>	
     <div id="board">
@@ -213,6 +214,7 @@
 	</div>
 	<br>
 	<hr>
+	<br><br>	
     <div id="answer"></div>
 	<br><br>
     </body>
