--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<span style="--i:6">L</span>
 			<span style="--i:7">E</span>
 		</div>
-	</div><br>
+	</div>
 	<div class="waviy1">
 		<span style="--i:1">d</span>
 		<span style="--i:2">a</span>
@@ -202,8 +202,7 @@
 	</div>
 	<div id="overlay"></div>
 	<div id="overlay1"></div>
-	<br><br>
-	<hr>		
+	<hr><br>		
     <div id="lives">
 	</div>	
     <div id="board">
@@ -214,7 +213,7 @@
 	</div>
 	<br>
 	<hr>
-	<br><br>	
+	<br>	
     <div id="answer"></div>
 	<br><br>
     </body>
