--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 	<div id="stats">
 		<div id="stats-item">
 			<span class="stats-item">
-				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:22px;height:22px;">
+				<class data-modal-target="#modal" id="rulesbutton"><img src="rulesicon.png" style="width:22px;height:22px;"></class>
 				<a href="mailto: geowordle@gmail.com" target="_"><img src="mail.png" style="width:22px;height:22px" alt ="EMAIL"></a>
 			</span>	
 			<span class="stats-item">
 			    <a href="https://www.buymeacoffee.com/sank0403/" target="_"><img src="hearticon.png" style="width:22px;height:22px" alt ="Buy Me A Coffee"></a>
-				<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:27px;height:20px;">
+				<class data-summary-target="#summary" id="statsbutton"><img src="statsicon.png" style="width:27px;height:20px;"></class>
 			</span>			
 		</div>
 	</div>		
