--- a/index.html
+++ b/index.html
@@ -178,11 +178,14 @@
 			<br>
 			<!-- The button used to copy the text -->
 			<div class="button-row">
-				&nbsp;
-				<button id="HTMLButton" class="buttonrad1" onclick="myFunction(); this.blur();">Share Stats🔊</button>
-				&nbsp; &nbsp; &nbsp; &nbsp;
+				<!-- &nbsp; -->
+				<button id="HTMLButton" class="buttonrad1" title="Copy To Clipboard!" onclick="myFunction(); this.blur();">COPY STATS🔊</button>
+				<!-- <button id="FBButton" onclick="myFunction(); this.blur();"> <a href="https://www.facebook.com/groups/329553752723826/?ref=share" target="_blank"><img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></a></button> -->
+				<button id="FBButton" onclick="FBFunction(); this.blur();"> <img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></button>
+				<button id="WAButton" onclick="WAFunction(); this.blur();"> <img src="whatsapp.png" height="30" alt="@Geordle on Whatsapp" title="Share to Whatsapp"></button>
+				<!-- &nbsp; &nbsp; &nbsp; &nbsp; -->
 				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
-						id="CoffeButton" value="Buy Me a Coffee❤️" /><a>
+						id="CoffeButton" value="❤️GEORDLE" title="Buy Me A Coffee!" /><a>						
 			</div>
 		</div>
 		<hr>		
