--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:title" content="Geordle - Wordle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing. A new game is available each day.">
   <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg"> -->
-  <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
+  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg"> -->
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
