--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 				<button id="HTMLButton" class="buttonrad1" title="Copy To Clipboard!" onclick="myFunction(); this.blur();">COPY STATS🔊</button>
 				<!-- <button id="FBButton" onclick="myFunction(); this.blur();"> <a href="https://www.facebook.com/groups/329553752723826/?ref=share" target="_blank"><img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></a></button> -->
 				<button id="FBButton" onclick="FBFunction(); this.blur();"> <img src="facebook2.png" height="30" alt="@Geordle on Facebook" title="@Geordle on Facebook"></button>
-				<button id="WAButton" onclick="WAFunction(); this.blur();"> <img src="whatsapp.png" height="30" alt="@Geordle on Whatsapp" title="Share to Whatsapp"></button>
+				<!-- <button id="WAButton" onclick="WAFunction(); this.blur();"> <img src="whatsapp.png" height="30" alt="@Geordle on Whatsapp" title="Share to Whatsapp"></button> -->
 				<!-- &nbsp; &nbsp; &nbsp; &nbsp; -->
 				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
 						id="CoffeButton" value="❤️GEORDLE" title="Buy Me A Coffee!" /><a>						
