--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     <!-- add icon link for all standard browsers -->
 	
   <!-- FB Meta Tags -->
-  <meta property="og:url" content="https://sank0403.github.io/geordle/">
+  <!-- <meta property="og:url" content="https://sank0403.github.io/geordle/"> -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Geordle - Wordle for Countries and Capitals">
-  <meta property="og:description" content="Guess the Country and Capital Pairing. A new game is available each day.">
+  <meta property="og:description" content="Guess the Country and Capital Pairing.">
   <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg"> -->
-  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg"> -->
+  <meta property="og:image" content="https://sank0403.github.io/geordle/mapiconlarge.jpg">
+  <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
