--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- add icon link for all standard browsers -->
 	
   <!-- FB Meta Tags -->
-  <!-- <meta property="og:url" content="https://sank0403.github.io/geordle/"> -->
+  <meta property="og:url" content="https://sank0403.github.io/geordle/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Geordle - Wordle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing.">
