--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Geordle - Wordle for Countries and Capitals</title>
+	<title>GEORDLE - Wordle for Countries and Capitals</title>
 	<link href="geordle.css" rel="stylesheet">
 	<script defer src="geordle.js"></script>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
@@ -28,7 +28,7 @@
   <!-- FB Meta Tags -->
   <meta property="og:url" content="https://sank0403.github.io/geordle/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Geordle - Wordle for Countries and Capitals">
+  <meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing.">
   <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg"> -->
   <meta property="og:image" content="https://sank0403.github.io/geordle/mapiconlarge.jpg">
