--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				<div id="bb"></div>
 			</div>
 			<div>
-				<div id="pzlhdr">Try a different puzzle.</div>
+				<div id="pzlhdr">Try a different puzzle</div>
 				<div id="pzl"><b><a href="https://tenizgame.github.io/" target="_">Play <u>TENIZ</u> 🎾 </a></b>
 				</div>
 			</div>
