--- a/index.html
+++ b/index.html
@@ -25,18 +25,24 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
     <!-- add icon link for all standard browsers -->
 	
-	<!-- FB Meta Tags -->
-	<meta property="og:url" content="https://sank0403.github.io/geordle/">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
-	<meta property="og:description"
-		content="Guess the Country and Capital Pairing.">
-	<meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
-	<!-- add icon link -->
-	<link rel="icon" href="https://sank0403.github.io/geordle/mapicon.jpg" type="image/x-icon"> <!--This is the web title image-->
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" />
-	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" /> <!--This is the phone icon web title image-->
-	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" /> <!--for shortcut icons and transitions-->
+  <!-- FB Meta Tags -->
+  <meta property="og:url" content="https://sank0403.github.io/geordle/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
+  <meta property="og:description" content="Guess the Country and Capital Pairing.">
+  <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg">
+  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/mapiconlarge.jpg"> -->
+  <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://sank0403.github.io/geordle/wallpaper.jpg" />
+  
+    <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
+            type = "image/x-icon">  
+	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
+	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
+	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
 	<button id="btnParty" type="button" hidden></button>
