--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="GEORDLE - Wordle for Countries and Capitals">
   <meta property="og:description" content="Guess the Country and Capital Pairing.">
-  <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg">
+  <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/wallpaper.jpg"> -->
   <!-- <meta property="og:image" content="https://sank0403.github.io/geordle/mapiconlarge.jpg"> -->
   <meta property="og:image" content="https://sank0403.github.io/geordle/mapicon.jpg">
 
