--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
 			<br>
 			<div id="ffhdr"></div>
 			<div id="ffdtl"></div>
+			<p style="color:darkgray">GEORDLE has now been live for over 500 Days! We hope you enjoy playing this game as much as we had creating it. You can <strong style='color: var(--green);' ><a href="https://www.buymeacoffee.com/sank0403" target="_"><u>Buy Us A Coffee</u></a></strong> to support future development and upkeep of this game. <b>THANK YOU for playing!</b><br><br></p>
 			<div id="sdhdr">⭐ STAR DISTRIBUTION ⭐</div>
 			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 			<br>
