--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 			<br>
 			<div id="ffhdr"></div>
 			<div id="ffdtl"></div>
-			<p style="color:darkgray" align="justify" >If you enjoyed this game, you can show your support by <strong style='color: var(--green);' ><a href="https://www.buymeacoffee.com/sank0403" target="_"><u>Buying Us A Coffee</u></a></strong> ☕️ to help future development and upkeep of this game. <b>THANK YOU for playing GEORDLE! 🌎 </b><br><br></p>
+			<p style="color:darkgray" align="justify" >If you enjoyed playing this game, you can show your support by <strong style='color: var(--green);' ><a href="https://www.buymeacoffee.com/sank0403" target="_"><u>Buying Us A Coffee</u></a></strong> ☕️ to help future development and upkeep of this game. <b>THANK YOU for playing GEORDLE! 🌎 </b><br><br></p>
 			<div id="sdhdr">⭐ STAR DISTRIBUTION ⭐</div>
 			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 			<br>
