--- a/statssaver/index.html
+++ b/statssaver/index.html
@@ -57,12 +57,14 @@
 		<span style="--i:11">r</span>
 
 	</div> 
-	<br>		
- 		<!--<input type="button" id="" value="🌎 PRACTICE" onclick="window.open('https://sank0403.github.io/geordle/practice/','_self'); this.blur();" class="buttonrad">	
+	<br>	
+<div class="summary-item">	
+ 		(TRANSFER YOUR STATS TO ANOTHER DEVICE)
+		<!--<input type="button" id="" value="🌎 PRACTICE" onclick="window.open('https://sank0403.github.io/geordle/practice/','_self'); this.blur();" class="buttonrad">	
 		<input type="button" id="" value="🌎 CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic/','_self'); this.blur();" class="buttonrad">	
 		<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">	 -->	
     <hr>
-<div class="summary-item">
+
 PLAYED:<input type="text" id="ssplayed" class="defaultbutton" value="" onkeypress="return isNumber(event)" />
 <br/>
 <br/>
@@ -86,7 +88,7 @@ STAR DISTRIBUTION - X⭐: <input type="text" id="xstar" class="defaultbutton" va
 <br/>
 </div>
 <hr>
-<button onclick="submitMe('ssplayed','sswinp','ssstreak','ssstars')" id="testButton" >Submit</button>
+<button onclick="submitMe('ssplayed','sswinp','ssstreak','ssstars')" id="testButton" >SUBMIT</button>
 	<br><br>
 
 	<br>	
