--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 				<!-- &nbsp; &nbsp; &nbsp; &nbsp; -->
 				<!-- <a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
 						id="CoffeButton" value="❤️GEORDLE" title="Buy Me A Coffee!" /><a> -->
-				a href="https://sank0403.github.io/geordle/statssaver/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
+				<a href="https://sank0403.github.io/geordle/statssaver/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
 						id="CoffeButton" value="SAVE STATS📱" title="Save Stats to New Device!" /><a>
 			</div>
 		</div>
