--- a/statssaver/index.html
+++ b/statssaver/index.html
@@ -64,7 +64,8 @@
 		<input type="button" id="" value="🌎 CLASSIC" onclick="window.open('https://sank0403.github.io/geordle/classic/','_self'); this.blur();" class="buttonrad">	
 		<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">	 -->	
     <hr>
-
+<br>
+ENTER YOUR STATS ON THE <t style="color: green;"><u><b>NEW DEVICE</u></b></t> AND SUBMIT<br><br>
 PLAYED:<input type="text" id="ssplayed" class="defaultbutton" value="" onkeypress="return isNumber(event)" />
 <br/>
 <br/>
