--- a/statssaver/index.html
+++ b/statssaver/index.html
@@ -66,25 +66,25 @@
     <hr>
 <br>
 ENTER YOUR STATS ON THE <t style="color: green;"><u><b>NEW DEVICE</u></b></t> AND SUBMIT<br><br>
-PLAYED:<input type="number" id="ssplayed" class="defaultbutton" value=""  />
+PLAYED:<input type="number" id="ssplayed" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
-WIN %:<input type="text" id="sswinp" class="defaultbutton" value=""   />
+WIN %:<input type="number" id="sswinp" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
-STREAK :<input type="text" id="ssstreak"  class="defaultbutton" value=""   />
+STREAK :<input type="number" id="ssstreak"  class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}"  />
 <br/>
 <br/>
-STARS :<input type="text" id="ssstars"  class="defaultbutton" value=""  />
+STARS :<input type="number" id="ssstars"  class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
-STAR DISTRIBUTION - 5⭐: <input type="text" id="5star" class="defaultbutton" value=""   /><br/>
-STAR DISTRIBUTION - 4⭐: <input type="text" id="4star" class="defaultbutton" value=""  /><br/>
-STAR DISTRIBUTION - 3⭐: <input type="text" id="3star" class="defaultbutton" value=""  /><br/>
-STAR DISTRIBUTION - 2⭐: <input type="text" id="2star" class="defaultbutton" value=""  /><br/>
-STAR DISTRIBUTION - 1⭐: <input type="text" id="1star" class="defaultbutton" value=""  /><br/>
-STAR DISTRIBUTION - 0⭐: <input type="text" id="0star" class="defaultbutton" value=""   /><br/>
-STAR DISTRIBUTION - X⭐: <input type="text" id="xstar" class="defaultbutton" value=""  /><br/>
+STAR DISTRIBUTION - 5⭐: <input type="number" id="5star" class="defaultbutton" value=""   onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
+STAR DISTRIBUTION - 4⭐: <input type="number" id="4star" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
+STAR DISTRIBUTION - 3⭐: <input type="number" id="3star" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
+STAR DISTRIBUTION - 2⭐: <input type="number" id="2star" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
+STAR DISTRIBUTION - 1⭐: <input type="number" id="1star" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
+STAR DISTRIBUTION - 0⭐: <input type="number" id="0star" class="defaultbutton" value=""   onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
+STAR DISTRIBUTION - X⭐: <input type="number" id="xstar" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
 <br/>
 <br/>
 </div>
