--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				<span id="9" class="summary-item"></span>
 			</div>
 							<a href="https://sank0403.github.io/geordle/statssaver/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
-						id="CoffeButton" value="SAVE STATS📱" title="Save Stats to New Device!" /><a>
+						id="TrfStats" value="SAVE STATS📱" title="Save Stats to New Device!" /><a>
 			<br>
 			<div id="ffhdr"></div>
 			<div id="ffdtl"></div>
