--- a/index.html
+++ b/index.html
@@ -172,8 +172,6 @@
 				<span id="8" class="summary-item"></span>
 				<span id="9" class="summary-item"></span>
 			</div>
-							<a href="https://sank0403.github.io/geordle/statssaver/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
-						id="TrfStats" value="SAVE STATS📱" title="Save Stats to New Device!" /><a>
 			<br>
 			<div id="ffhdr"></div>
 			<div id="ffdtl"></div>
@@ -190,8 +188,10 @@
 				<button id="TwitterButton" onclick="TwitterFunction(); this.blur();"> <img src="twitter2.png" height="30" alt="@Geordle on Twitter" title="@Geordle on Twitter"></button>
 				<!-- <button id="WAButton" onclick="WAFunction(); this.blur();"> <img src="whatsapp.png" height="30" alt="@Geordle on Whatsapp" title="Share to Whatsapp"></button> -->
 				<!-- &nbsp; &nbsp; &nbsp; &nbsp; -->
-				<a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
-						id="CoffeButton" value="❤️GEORDLE" title="Buy Me A Coffee!" /><a>
+				<!-- <a href="https://www.buymeacoffee.com/sank0403/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
+						id="CoffeButton" value="❤️GEORDLE" title="Buy Me A Coffee!" /><a>-->
+				<a href="https://sank0403.github.io/geordle/statssaver/" target="_"><input type="button" class="buttonrad1" onclick="this.blur();"
+						id="CoffeButton" value="SAVE STATS📱" title="Save Stats to New Device!" /><a>
 			</div>
 		</div>
 		<hr>		
