--- a/statssaver/index.html
+++ b/statssaver/index.html
@@ -65,7 +65,7 @@
 		<input type="button" value="❤️ GEORDLE️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank'); this.blur();" class="buttonrad">	 -->	
     <hr>
 <br>
-ENTER YOUR STATS ON THE <t style="color: green;"><u><b>NEW DEVICE</u></b></t> AND SUBMIT<br><br>
+ENTER YOUR STATS ON THE <t style="color: #6AAA64;"><u><b>NEW DEVICE</u></b></t> AND SUBMIT<br><br>
 PLAYED:<input type="number" id="ssplayed" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
