--- a/statssaver/index.html
+++ b/statssaver/index.html
@@ -66,16 +66,16 @@
     <hr>
 <br>
 ENTER YOUR STATS ON THE <t style="color: #6AAA64;"><u><b>NEW DEVICE</u></b></t> AND SUBMIT<br><br>
-PLAYED:<input type="number" id="ssplayed" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
+&nbsp;&nbsp;PLAYED:<input type="number" id="ssplayed" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
-WIN %:<input type="number" id="sswinp" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;WIN %:<input type="number" id="sswinp" class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
 STREAK :<input type="number" id="ssstreak"  class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}"  />
 <br/>
 <br/>
-STARS :<input type="number" id="ssstars"  class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
+&nbsp;&nbsp;&nbsp;STARS :<input type="number" id="ssstars"  class="defaultbutton" value=""  onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" />
 <br/>
 <br/>
 STAR DISTRIBUTION - 5⭐: <input type="number" id="5star" class="defaultbutton" value=""   onkeydown="if(event.key==='.' || event.key==='-' || event.key==='+'){event.preventDefault();}" /><br/>
