--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script
 		src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti@1.22.0/tsparticles.preset.confetti.bundle.min.js"></script>	
 	<meta charset="UTF-8">
+	<meta name="robots" content="noindex, nofollow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>GEORDLE - Wordle for Countries and Capitals</title>
